# kuren-cli

./: Cargo.toml  LICENSE  README.md  build.rs
proto-vendor/google/api/: http.proto
proto/kuren/auth/: auth.proto
proto/kuren/authz/: authz.proto
proto/kuren/commerce/: commerce.proto
proto/kuren/email/: email.proto
proto/kuren/messaging/: messaging.proto
proto/kuren/notes/: notes.proto
proto/kuren/notifications/: notifications.proto
proto/kuren/organization/: organization.proto
proto/kuren/payment/: payment.proto
proto/kuren/social/: social.proto
proto/kuren/wallet/: wallet.proto
skills/kuren/: SKILL.md
src/: main.rs
src/commands/: authorize.rs  connect.rs  docs.rs  email.rs  listen.rs  login.rs  logout.rs  mod.rs  msg.rs  notes.rs  org.rs  pay.rs  payments.rs  profile.rs  signup.rs  update.rs  wallet.rs  whoami.rs
src/config/: mod.rs
src/grpc/: mod.rs
src/keys/: mod.rs
